SET(APP_SRCS
    WinMain.c
    WinProc.c
    WinProc.h)

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${SRC_ROOT_DIR}
  ${GLOBAL_INCLUDE_DIR}
  ${GAME_INCLUDE_DIR}
)

ADD_EXECUTABLE(TRB WIN32 ${APP_SRCS} ${APP_MOC_SRCS})

#TARGET_LINK_LIBRARIES(ACDC
#  ACDCCore
#  ACDCGUI
#  ACDCUtilities
#)

ADD_DEPENDENCIES(TRB TRBCommon TRBGFX TRBGUI TRBSFX)

# Install to the temporary directory
INSTALL(TARGETS TRB RUNTIME DESTINATION ${TRB_INSTALLATION_PREFIX})


