
SET (COMMON_SRC
  ApiDefinitions.h
  Image.h
  Image.c
  Point.h
  Point.c
  Rect.h
  Rect.c
)

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${GAME_INCLUDE_DIR}
  ${GLOBAL_INCLUDE_DIR}
)

ADD_DEFINITIONS("-DCOMMON_API_EXPORTS")

ADD_LIBRARY(TRBCommon SHARED
  ${COMMON_SRC}
)

INSTALL(TARGETS TRBCommon RUNTIME DESTINATION ${TRB_INSTALLATION_PREFIX})