
SET (GFX_SRC
  ApiDefinitions.h
  Sprite.h
  Sprite.c
)

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${GAME_INCLUDE_DIR}
  ${GLOBAL_INCLUDE_DIR}
)

ADD_DEFINITIONS("-DGFX_API_EXPORTS")

ADD_LIBRARY(TRBGFX SHARED
  ${GFX_SRC}
)

INSTALL(TARGETS TRBGFX RUNTIME DESTINATION ${TRB_INSTALLATION_PREFIX})