
SET (SFX_SRC
  ApiDefinitions.h
  Sound.h
  Sound.c
)

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${GAME_INCLUDE_DIR}
  ${GLOBAL_INCLUDE_DIR}
)

ADD_DEFINITIONS("-DSFX_API_EXPORTS")

ADD_LIBRARY(TRBSFX SHARED
  ${SFX_SRC}
)

INSTALL(TARGETS TRBSFX RUNTIME DESTINATION ${TRB_INSTALLATION_PREFIX})